ingress/aks-helloworld-two.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-two  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-two
  template:
    metadata:
      labels:
        app: aks-helloworld-two
    spec:
      containers:
      - name: aks-helloworld-two
        image: apache/causeway-app-helloworld
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-two  
spec:
  type: Nodeport
  ports:
  - port: 8081
  selector:
    app: aks-helloworld-two
